Update use-eclipse.md